<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#20FFFFFF" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <EditText
            android:id="@+id/phone_num"
            style="@style/normal_edit_style"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:hint="@string/tips_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/password"
            style="@style/normal_edit_style"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:hint="@string/tips_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/password_repeat"
            style="@style/normal_edit_style"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:hint="@string/tips_password_repeat"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_send_auth"
            style="@style/normal_blue_authcode_btn_style"
            android:layout_width="260dip"
            android:layout_height="50dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dip"
            android:text="@string/send_auth" />

        <TextView
            android:id="@+id/auth_tips"
            style="@style/white_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/msg_auth_code"
            style="@style/normal_edit_style"
            android:layout_width="260dip"
            android:layout_height="60dip"
            android:background="#10FFFFFF"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:hint="@string/tips_msg_auth_code"
            android:inputType="numberSigned" />

        <CheckBox
            android:layout_marginTop="17dip"
            android:id="@+id/agree"
            style="@style/FCheckBox.WhiteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/agree_tips" />

        <Button
            android:layout_marginTop="17dip"
            android:id="@+id/complete"
            style="@style/normal_black_btn_style"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:text="@string/complete" />
    </LinearLayout>

</ScrollView>